Fix layout issues in past events section and donate form

--- a/src/pages/about-page/past-events/PastEvent.css
+++ b/src/pages/about-page/past-events/PastEvent.css
@@ -48,6 +48,7 @@
 
 .event-row {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   gap: 8rem;
   padding-top: 8rem;
@@ -87,7 +88,7 @@
 .past-events-line {
   width: 2px;
   top: 50px;
-  min-height: 500px;
+  min-height: 520px;
   border-left: 3px dashed var(--accent-color-2);
   position: absolute;
   left: 49.9%;
